--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Chambers-s-Journal-of-Popular-Literature-Science-and-Art-fifth-series-no-123-vol-III-May-8-18__70386
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 70386-h/images/cover.jpg
 creator:
   author:
     agent_name: Various
@@ -9,6 +12,8 @@ creator:
     gutenberg_agent_id: '116'
     url: http://www.gutenberg.org/2009/agents/116
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/70386#Chambers-s-Journal-of-Popular-Literature-Science-and-Art-fifth-series-no-123-vol-III-May-8-18_
 gutenberg_issued: '2023-03-26'
 identifiers:
   gutenberg: '70386'
